--- a/examples/HelloMQTT/HelloMQTT/en.lproj/MainStoryboard_iPad.storyboard
+++ b/examples/HelloMQTT/HelloMQTT/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2177" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
-        <deployment defaultVersion="1280" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1173"/>
     </dependencies>
@@ -114,12 +113,20 @@
                                     <action selector="subscribe:" destination="2" eventType="touchUpInside" id="KN1-ag-DzE"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="209.124.50.174" borderStyle="roundedRect" placeholder="MQTT server address here " minimumFontSize="17" id="Vjb-XD-iT8">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="test.mosquitto.org" borderStyle="roundedRect" placeholder="MQTT server address here " minimumFontSize="17" id="Vjb-XD-iT8">
                                 <rect key="frame" x="7" y="6" width="163" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" id="y9w-BN-oaL">
+                                <rect key="frame" x="20" y="510" width="728" height="430"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -133,6 +140,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="connectButton" destination="eR7-yu-k99" id="ZbA-um-iau"/>
+                        <outlet property="consoleView" destination="y9w-BN-oaL" id="AYX-hb-cc8"/>
                         <outlet property="messageTable" destination="QSh-pD-TrM" id="DMV-S7-sdT"/>
                         <outlet property="mqttAddress" destination="Vjb-XD-iT8" id="KyI-iX-jc7"/>
                         <outlet property="scrollView" destination="3" id="NXg-Jq-oer"/>
@@ -151,6 +159,7 @@
                 <relationship kind="action" name="sendMessage:"/>
                 <relationship kind="action" name="subscribe:"/>
                 <relationship kind="outlet" name="connectButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="consoleView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="messageTable" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="mqttAddress" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
